@@ -1,3 +1,8 @@
+2010-02-03  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclVar.c (Tcl_ArrayObjCmd): More corrections for the 'unset'
+	subcommand.
+
 2010-02-02  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclCompile.c: [Bug 2933089]: A literal sharing problem with
